src/util/ua_eventfilter_lex.c
/* Generated by re2c 4.3 */
/* This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at http://mozilla.org/MPL/2.0/.
 *
 *    Copyright 2024 (c) Fraunhofer IOSB (Author: Julius Pfrommer)
 */

#include <open62541/util.h>
#include "ua_eventfilter_parser.h"

/* This compilation unit uses the re2c lexer generator. The final C source is
 * generated with the following script:
 *
 *   re2c -i --no-generation-date ua_eventfilter_lex.re > ua_eventfilter_lex.c
 *
 * In order that users of the SDK don't need to install re2c, always commit a
 * recent ua_eventfilter_lex.c if changes are made to the lexer. */

/* Undefine macros to prevent clashes in the amalgamation build */
#undef YYPEEK
#undef YYSKIP
#undef YYBACKUP
#undef YYRESTORE
#undef YYSHIFT
#undef YYSTAGP
#undef YYSTAGN
#undef YYSHIFTSTAG
#undef YYRESTORETAG
#define YYPEEK() (pos < end) ? *pos: 0
#define YYSKIP() ++pos;
#define YYBACKUP() m = pos;
#define YYRESTORE() pos = m;
#define YYSHIFT(shift) pos += shift
#define YYSTAGP(t) t = pos
#define YYSTAGN(t) t = NULL
#define YYSHIFTSTAG(t, shift) t += shift
#define YYRESTORETAG(t) pos = t;



UA_StatusCode
UA_EventFilter_skip(const UA_ByteString content, size_t *offset,
                    EFParseContext *ctx) {
    const u8 *pos = &content.data[*offset];
    const u8 *end = &content.data[content.length];

  begin:
    *offset = (uintptr_t)(pos - content.data);
    size_t initial = *offset;

    
{
	u8 yych;
	yych = YYPEEK();
	switch (yych) {
		case 0x08:
		case '\t':
		case '\n':
		case '\v':
		case '\r':
		case ' ': goto yy3;
		case '/': goto yy5;
		default: goto yy1;
	}
yy1:
	YYSKIP();
yy2:
	{ return UA_STATUSCODE_GOOD; }
yy3:
	YYSKIP();
	yych = YYPEEK();
	switch (yych) {
		case 0x08:
		case '\t':
		case '\n':
		case '\v':
		case '\r':
		case ' ': goto yy3;
		default: goto yy4;
	}
yy4:
	{ goto begin; }
yy5:
	YYSKIP();
	yych = YYPEEK();
	switch (yych) {
		case '*': goto yy6;
		case '/': goto yy7;
		default: goto yy2;
	}
yy6:
	YYSKIP();
	{ for(; pos < end - 1; pos++)
           { if(pos[0] == '*' && pos[1] == '/') { pos += 2; goto begin; } }
           unsigned c = 0, l = 0;
           pos2lines(content, initial, &l, &c);
           UA_LOG_ERROR(ctx->logger, UA_LOGCATEGORY_APPLICATION,
                        "The comment starting at line %u, column %u "
                        "never terminates", l, c);
           return UA_STATUSCODE_BADINTERNALERROR;
         }
yy7:
	YYSKIP();
	yych = YYPEEK();
	switch (yych) {
		case 0x00:
		case '\n':
		case '\r': goto yy8;
		default: goto yy7;
	}
yy8:
	{ goto begin; }
}

}

int
UA_EventFilter_lex(const UA_ByteString content, size_t *offset,
                   EFParseContext *ctx, Operand **token) {
    const u8 *pos = &content.data[*offset];
    const u8 *end = &content.data[content.length];
    const u8 *m, *b; /* marker, match begin */
    const u8 *yyt1 = NULL;
    const UA_DataType *lt; /* literal type */
    UA_StatusCode res = UA_STATUSCODE_GOOD;
    UA_ByteString match;
    UA_FilterOperator f;

    int tokenId = 0;
    while(true) {
        /* Store the beginning */
        b = pos;

        
{
	u8 yych;
	unsigned int yyaccept = 0;
	yych = YYPEEK();
	switch (yych) {
		case 0x00:
		case '\t':
		case '\n':
		case '\v':
		case '\f':
		case '\r':
		case ' ':
		case '.': goto yy10;
		case '!': goto yy13;
		case '"': goto yy15;
		case '#':
		case '/': goto yy16;
		case '$': goto yy19;
		case '&': goto yy20;
		case '\'': goto yy22;
		case '(': goto yy23;
		case ')': goto yy24;
		case ',': goto yy25;
		case '-': goto yy26;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy27;
		case ':': goto yy29;
		case '<': goto yy30;
		case '=': goto yy32;
		case '>': goto yy33;
		case 'A':
		case 'a': goto yy35;
		case 'B': goto yy36;
		case 'C':
		case 'c': goto yy37;
		case 'D':
		case 'd': goto yy38;
		case 'E':
		case 'e': goto yy39;
		case 'F':
		case 'f': goto yy40;
		case 'G': goto yy41;
		case 'I': goto yy42;
		case 'L':
		case 'l': goto yy43;
		case 'N': goto yy44;
		case 'O':
		case 'o': goto yy45;
		case 'Q':
		case 'q': goto yy46;
		case 'S': goto yy47;
		case 'T':
		case 't': goto yy48;
		case 'U':
		case 'u': goto yy49;
		case 'W':
		case 'w': goto yy50;
		case '[': goto yy51;
		case ']': goto yy52;
		case 'b': goto yy53;
		case 'g': goto yy54;
		case 'i': goto yy55;
		case 'n': goto yy56;
		case 's': goto yy57;
		case '{': goto yy58;
		case '|': goto yy60;
		default: goto yy12;
	}
yy10:
	YYSKIP();
yy11:
	{ goto finish; }
yy12:
	yyaccept = 0;
	YYSKIP();
	YYBACKUP();
	yych = YYPEEK();
	switch (yych) {
		case 0x00:
		case '\t':
		case '\n':
		case '\v':
		case '\f':
		case '\r':
		case ' ':
		case '!':
		case '(':
		case ')':
		case ',':
		case '.':
		case ':':
		case '<':
		case '>':
		case '[':
		case ']': goto yy11;
		default: goto yy63;
	}
yy13:
	YYSKIP();
yy14:
	{ f = UA_FILTEROPERATOR_NOT;     tokenId = EF_TOK_NOT;     goto make_op; }
yy15:
	yyaccept = 0;
	YYSKIP();
	YYBACKUP();
	yych = YYPEEK();
	if (yych <= 0x00) goto yy11;
	goto yy67;
yy16:
	yyaccept = 1;
	YYSKIP();
	YYBACKUP();
	yych = YYPEEK();
yy17:
	switch (yych) {
		case 0x00:
		case '\t':
		case '\n':
		case '\v':
		case '\f':
		case '\r':
		case ' ':
		case '!':
		case '(':
		case ')':
		case ',':
		case '.':
		case '<':
		case '>':
		case ']': goto yy18;
		case '&': goto yy75;
		case '[': goto yy76;
		default: goto yy16;
	}
yy18:
	{ goto sao; }
yy19:
	yyaccept = 0;
	YYSKIP();
	YYBACKUP();
	yych = YYPEEK();
	switch (yych) {
		case 0x00:
		case '\t':
		case '\n':
		case '\v':
		case '\f':
		case '\r':
		case ' ':
		case '!':
		case '(':
		case ')':
		case ',':
		case '.':
		case ':':
		case '<':
		case '>':
		case '[':
		case ']': goto yy11;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy77;
		default: goto yy63;
	}
yy20:
	yyaccept = 2;
	YYSKIP();
	YYBACKUP();
	yych = YYPEEK();
	switch (yych) {
		case 0x00:
		case '\n': goto yy21;
		case '&': goto yy79;
		default: goto yy62;
	}
yy21:
	{ f = UA_FILTEROPERATOR_BITWISEAND;                        goto binary_op; }
yy22:
	yyaccept = 0;
	YYSKIP();
	YYBACKUP();
	yych = YYPEEK();
	if (yych <= 0x00) goto yy11;
	goto yy82;
yy23:
	YYSKIP();
	{ tokenId = EF_TOK_LPAREN;     goto finish; }
yy24:
	YYSKIP();
	{ tokenId = EF_TOK_RPAREN;     goto finish; }
yy25:
	YYSKIP();
	{ tokenId = EF_TOK_COMMA;      goto finish; }
yy26:
	yyaccept = 0;
	YYSKIP();
	YYBACKUP();
	yych = YYPEEK();
	switch (yych) {
		case 0x00:
		case '\t':
		case '\n':
		case '\v':
		case '\f':
		case '\r':
		case ' ':
		case '!':
		case '(':
		case ')':
		case ',':
		case '.':
		case ':':
		case '<':
		case '[':
		case ']': goto yy11;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy27;
		case '>': goto yy90;
		default: goto yy63;
	}
yy27:
	yyaccept = 3;
	YYSKIP();
	YYBACKUP();
	yych = YYPEEK();
	switch (yych) {
		case 0x00:
		case '\t':
		case '\n':
		case '\v':
		case '\f':
		case '\r':
		case ' ':
		case '!':
		case '(':
		case ')':
		case ',':
		case '.':
		case ':':
		case '<':
		case '>':
		case '[':
		case ']': goto yy28;
		case '#':
		case '/': goto yy16;
		case '&': goto yy65;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy27;
		default: goto yy62;
	}
yy28:
	{ lt = &UA_TYPES[UA_TYPES_INT32]; goto lit; }
yy29:
	YYSKIP();
	yych = YYPEEK();
	switch (yych) {
		case '=': goto yy92;
		default: goto yy11;
	}
yy30:
	YYSKIP();
	yych = YYPEEK();
	switch (yych) {
		case '=': goto yy93;
		default: goto yy31;
	}
yy31:
	{ f = UA_FILTEROPERATOR_LESSTHAN;                          goto binary_op; }
yy32:
	yyaccept = 0;
	YYSKIP();
	YYBACKUP();
	yych = YYPEEK();
	switch (yych) {
		case 0x00:
		case '\t':
		case '\n':
		case '\v':
		case '\f':
		case '\r':
		case ' ':
		case '!':
		case '(':
		case ')':
		case ',':
		case '.':
		case ':':
		case '<':
		case '>':
		case '[':
		case ']': goto yy11;
		case '=': goto yy95;
		default: goto yy63;
	}
yy33:
	YYSKIP();
	yych = YYPEEK();
	switch (yych) {
		case '=': goto yy97;
		default: goto yy34;
	}
yy34:
	{ f = UA_FILTEROPERATOR_GREATERTHAN;                       goto binary_op; }
yy35:
	yyaccept = 0;
	YYSKIP();
	YYBACKUP();
	yych = YYPEEK();
	switch (yych) {
		case 0x00:
		case '\t':
		case '\n':
		case '\v':
		case '\f':
		case '\r':
		case ' ':
		case '!':
		case '(':
		case ')':
		case ',':
		case '.':
		case ':':
		case '<':
		case '>':
		case '[':
		case ']': goto yy11;
		case 'N':
		case 'n': goto yy99;
		default: goto yy63;
	}
yy36:
	yyaccept = 0;
	YYSKIP();
	YYBACKUP();
	yych = YYPEEK();
	switch (yych) {
		case 0x00:
		case '\t':
		case '\n':
		case '\v':
		case '\f':
		case '\r':
		case ' ':
		case '!':
		case '(':
		case ')':
		case ',':
		case '.':
		case ':':
		case '<':
		case '>':
		case '[':
		case ']': goto yy11;
		case 'E':
		case 'e': goto yy100;
		case 'I':
		case 'i': goto yy101;
		case 'O':
		case 'o': goto yy102;
		case 'Y':
		case 'y': goto yy103;
		default: goto yy63;
	}
yy37:
	yyaccept = 0;
	YYSKIP();
	YYBACKUP();
	yych = YYPEEK();
	switch (yych) {
		case 0x00:
		case '\t':
		case '\n':
		case '\v':
		case '\f':
		case '\r':
		case ' ':
		case '!':
		case '(':
		case ')':
		case ',':
		case '.':
		case ':':
		case '<':
		case '>':
		case '[':
		case ']': goto yy11;
		case 'A':
		case 'a': goto yy104;
		default: goto yy63;
	}
yy38:
	yyaccept = 0;
	YYSKIP();
	YYBACKUP();
	yych = YYPEEK();
	switch (yych) {
		case 0x00:
		case '\t':
		case '\n':
		case '\v':
		case '\f':
		case '\r':
		case ' ':
		case '!':
		case '(':
		case ')':
		case ',':
		case '.':
		case ':':
		case '<':
		case '>':
		case '[':
		case ']': goto yy11;
		case 'A':
		case 'a': goto yy105;
		case 'O':
		case 'o': goto yy106;
		default: goto yy63;
	}
yy39:
	yyaccept = 0;
	YYSKIP();
	YYBACKUP();
	yych = YYPEEK();
	switch (yych) {
		case 0x00:
		case '\t':
		case '\n':
		case '\v':
		case '\f':
		case '\r':
		case ' ':
		case '!':
		case '(':
		case ')':
		case ',':
		case '.':
		case ':':
		case '<':
		case '>':
		case '[':
		case ']': goto yy11;
		case 'Q':
		case 'q': goto yy107;
		case 'X':
		case 'x': goto yy108;
		default: goto yy63;
	}
yy40:
	yyaccept = 0;
	YYSKIP();
	YYBACKUP();
	yych = YYPEEK();
	switch (yych) {
		case 0x00:
		case '\t':
		case '\n':
		case '\v':
		case '\f':
		case '\r':
		case ' ':
		case '!':
		case '(':
		case ')':
		case ',':
		case '.':
		case ':':
		case '<':
		case '>':
		case '[':
		case ']': goto yy11;
		case 'A':
		case 'a': goto yy109;
		case 'L':
		case 'l': goto yy110;
		case 'O':
		case 'o': goto yy111;
		default: goto yy63;
	}
yy41:
	yyaccept = 0;
	YYSKIP();
	YYBACKUP();
	yych = YYPEEK();
	switch (yych) {
		case 0x00:
		case '\t':
		case '\n':
		case '\v':
		case '\f':
		case '\r':
		case ' ':
		case '!':
		case '(':
		case ')':
		case ',':
		case '.':
		case ':':
		case '<':
		case '>':
		case '[':
		case ']': goto yy11;
		case 'R':
		case 'r': goto yy112;
		case 'U':
		case 'u': goto yy113;
		default: goto yy63;
	}
yy42:
	yyaccept = 0;
	YYSKIP();
	YYBACKUP();
	yych = YYPEEK();
	switch (yych) {
		case 0x00:
		case '\t':
		case '\n':
		case '\v':
		case '\f':
		case '\r':
		case ' ':
		case '!':
		case '(':
		case ')':
		case ',':
		case '.':
		case ':':
		case '<':
		case '>':
		case '[':
		case ']': goto yy11;
		case 'N':
		case 'n': goto yy114;
		case 'S':
		case 's': goto yy115;
		default: goto yy63;
	}
yy43:
	yyaccept = 0;
	YYSKIP();
	YYBACKUP();
	yych = YYPEEK();
	switch (yych) {
		case 0x00:
		case '\t':
		case '\n':
		case '\v':
		case '\f':
		case '\r':
		case ' ':
		case '!':
		case '(':
		case ')':
		case ',':
		case '.':
		case ':':
		case '<':
		case '>':
		case '[':
		case ']': goto yy11;
		case 'E':
		case 'e': goto yy116;
		case 'I':
		case 'i': goto yy117;
		case 'O':
		case 'o': goto yy118;
		default: goto yy63;
	}
yy44:
	yyaccept = 0;
	YYSKIP();
	YYBACKUP();
	yych = YYPEEK();
	switch (yych) {
		case 0x00:
		case '\t':
		case '\n':
		case '\v':
		case '\f':
		case '\r':
		case ' ':
		case '!':
		case '(':
		case ')':
		case ',':
		case '.':
		case ':':
		case '<':
		case '>':
		case '[':
		case ']': goto yy11;
		case 'O':
		case 'o': goto yy119;
		default: goto yy63;
	}
yy45:
	yyaccept = 0;
	YYSKIP();
	YYBACKUP();
	yych = YYPEEK();
	switch (yych) {
		case 0x00:
		case '\t':
		case '\n':
		case '\v':
		case '\f':
		case '\r':
		case ' ':
		case '!':
		case '(':
		case ')':
		case ',':
		case '.':
		case ':':
		case '<':
		case '>':
		case '[':
		case ']': goto yy11;
		case 'F':
		case 'f': goto yy120;
		case 'R':
		case 'r': goto yy121;
		default: goto yy63;
	}
yy46:
	yyaccept = 0;
	YYSKIP();
	YYBACKUP();
	yych = YYPEEK();
	switch (yych) {
		case 0x00:
		case '\t':
		case '\n':
		case '\v':
		case '\f':
		case '\r':
		case ' ':
		case '!':
		case '(':
		case ')':
		case ',':
		case '.':
		case ':':
		case '<':
		case '>':
		case '[':
		case ']': goto yy11;
		case 'U':
		case 'u': goto yy123;
		default: goto yy63;
	}
yy47:
	yyaccept = 0;
	YYSKIP();
	YYBACKUP();
	yych = YYPEEK();
	switch (yych) {
		case 0x00:
		case '\t':
		case '\n':
		case '\v':
		case '\f':
		case '\r':
		case ' ':
		case '!':
		case '(':
		case ')':
		case ',':
		case '.':
		case ':':
		case '<':
		case '>':
		case '[':
		case ']': goto yy11;
		case 'B':
		case 'b': goto yy124;
		case 'E':
		case 'e': goto yy125;
		case 'T':
		case 't': goto yy126;
		default: goto yy63;
	}
yy48:
	yyaccept = 0;
	YYSKIP();
	YYBACKUP();
	yych = YYPEEK();
	switch (yych) {
		case 0x00:
		case '\t':
		case '\n':
		case '\v':
		case '\f':
		case '\r':
		case ' ':
		case '!':
		case '(':
		case ')':
		case ',':
		case '.':
		case ':':
		case '<':
		case '>':
		case '[':
		case ']': goto yy11;
		case 'R':
		case 'r': goto yy127;
		default: goto yy63;
	}
yy49:
	yyaccept = 0;
	YYSKIP();
	YYBACKUP();
	yych = YYPEEK();
	switch (yych) {
		case 0x00:
		case '\t':
		case '\n':
		case '\v':
		case '\f':
		case '\r':
		case ' ':
		case '!':
		case '(':
		case ')':
		case ',':
		case '.':
		case ':':
		case '<':
		case '>':
		case '[':
		case ']': goto yy11;
		case 'I':
		case 'i': goto yy128;
		default: goto yy63;
	}
yy50:
	yyaccept = 0;
	YYSKIP();
	YYBACKUP();
	yych = YYPEEK();
	switch (yych) {
		case 0x00:
		case '\t':
		case '\n':
		case '\v':
		case '\f':
		case '\r':
		case ' ':
		case '!':
		case '(':
		case ')':
		case ',':
		case '.':
		case ':':
		case '<':
		case '>':
		case '[':
		case ']': goto yy11;
		case 'H':
		case 'h': goto yy129;
		default: goto yy63;
	}
yy51:
	YYSKIP();
	{ tokenId = EF_TOK_LBRACKET;   goto finish; }
yy52:
	YYSKIP();
	{ tokenId = EF_TOK_RBRACKET;   goto finish; }
yy53:
	yyaccept = 0;
	YYSKIP();
	YYBACKUP();
	yych = YYPEEK();
	switch (yych) {
		case 0x00:
		case '\t':
		case '\n':
		case '\v':
		case '\f':
		case '\r':
		case ' ':
		case '!':
		case '(':
		case ')':
		case ',':
		case '.':
		case ':':
		case '<':
		case '>':
		case '[':
		case ']': goto yy11;
		case '=': goto yy130;
		case 'E':
		case 'e': goto yy100;
		case 'I':
		case 'i': goto yy101;
		case 'O':
		case 'o': goto yy102;
		case 'Y':
		case 'y': goto yy103;
		default: goto yy63;
	}
yy54:
